style: fix mobile wrap alignment for google rating to right side

--- a/style.css
+++ b/style.css
@@ -1035,8 +1035,6 @@ h3 {
 
 @media (max-width: 768px) {
     .services__rating {
-        width: 100%;
-        justify-content: flex-start;
         margin-bottom: 0;
     }
 }
